--- a/interpreter/Cargo.toml
+++ b/interpreter/Cargo.toml
@@ -6,4 +6,5 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+enum-as-inner = "0.6.0"
 users = "0.11.0"
